[gd_scene load_steps=5 format=1]

[ext_resource path="res://data/scenes/title_screen.gd" type="Script" id=1]
[ext_resource path="res://data/scenes/title.png" type="Texture" id=2]
[ext_resource path="res://data/fnt/retro_title.fnt" type="BitmapFont" id=3]
[ext_resource path="res://data/fnt/retro_nrm.fnt" type="BitmapFont" id=4]

[node name="title_screen" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 321.583, 241.108 )
transform/scale = Vector2( 1.00262, 1.20484 )
texture = ExtResource( 2 )

[node name="start" type="Node2D" parent="."]

[node name="title" type="Label" parent="start"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 641.0
margin/bottom = 115.0
custom_fonts/font = ExtResource( 3 )
text = "Night Light"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="start" type="Button" parent="start"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 233.0
margin/top = 128.0
margin/right = 405.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start Game"
flat = false

[node name="quit" type="Button" parent="start"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 234.0
margin/top = 191.0
margin/right = 406.0
margin/bottom = 219.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="credits" type="Button" parent="start"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 232.0
margin/top = 159.0
margin/right = 406.0
margin/bottom = 187.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false

[node name="credits" type="Node2D" parent="."]

visibility/visible = false

[node name="back1" type="Button" parent="credits"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 233.0
margin/top = 412.0
margin/right = 405.0
margin/bottom = 439.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="Panel" type="Panel" parent="credits"]

visibility/self_opacity = 0.86
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 42.0
margin/top = 20.0
margin/right = 615.0
margin/bottom = 391.0

[node name="credits" type="Label" parent="credits/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 37.0
margin/top = 29.0
margin/right = 306.0
margin/bottom = 399.0
custom_fonts/font = ExtResource( 4 )
text = "Story:
Kyle Thomas
Elizabeth Beaver

Level Design:
Kyle Thomas
Elizabeth Beaver

Artwork:
Elizabeth Beaver
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="credits1" type="Label" parent="credits/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 317.0
margin/top = 30.0
margin/right = 845.0
margin/bottom = 400.0
custom_fonts/font = ExtResource( 4 )
text = "Music&Sounds:
Pizzamakesgames
Kyle Thomas

Programing:
Kyle Thomas


Special Thanks:
You for playing!
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="credits2" type="Label" parent="credits/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 286.0
margin/right = 541.0
margin/bottom = 656.0
custom_fonts/font = ExtResource( 4 )
text = "Made with <3
and the Godot Engine"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="difficulty" type="Node2D" parent="."]

visibility/visible = false

[node name="easy" type="Button" parent="difficulty"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 236.0
margin/top = 81.0
margin/right = 408.0
margin/bottom = 108.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Normal"
flat = false

[node name="normal" type="Button" parent="difficulty"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 236.0
margin/top = 113.0
margin/right = 408.0
margin/bottom = 140.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Hard"
flat = false

[node name="nightmare" type="Button" parent="difficulty"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 235.0
margin/top = 146.0
margin/right = 407.0
margin/bottom = 173.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Nightmare"
flat = false

[node name="back" type="Button" parent="difficulty"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 237.0
margin/top = 192.0
margin/right = 409.0
margin/bottom = 219.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="dif" type="Label" parent="difficulty"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 2.0
margin/right = 642.0
margin/bottom = 68.0
custom_fonts/font = ExtResource( 4 )
text = "For everyone"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="start/start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="start/quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="start/credits" to="." method="_on_credits_pressed"]

[connection signal="pressed" from="credits/back1" to="." method="_on_back1_pressed"]

[connection signal="mouse_enter" from="difficulty/easy" to="." method="_on_easy_mouse_enter"]

[connection signal="mouse_exit" from="difficulty/easy" to="." method="_on_easy_mouse_exit"]

[connection signal="pressed" from="difficulty/easy" to="." method="_on_easy_pressed"]

[connection signal="mouse_enter" from="difficulty/normal" to="." method="_on_normal_mouse_enter"]

[connection signal="mouse_exit" from="difficulty/normal" to="." method="_on_normal_mouse_exit"]

[connection signal="pressed" from="difficulty/normal" to="." method="_on_normal_pressed"]

[connection signal="mouse_enter" from="difficulty/nightmare" to="." method="_on_nightmare_mouse_enter"]

[connection signal="mouse_exit" from="difficulty/nightmare" to="." method="_on_nightmare_mouse_exit"]

[connection signal="pressed" from="difficulty/nightmare" to="." method="_on_nightmare_pressed"]

[connection signal="pressed" from="difficulty/back" to="." method="_on_back_pressed"]


